--- a/main.css
+++ b/main.css
@@ -34,11 +34,30 @@
     font-family: century gothic;
 	}
 	
+	#botao{
+	color:#fff;
+	font-size:30px; 
+    background-color: rgba(255, 0, 0, 0.6);
+    border-color:#FF6868;
+    border: 1px solid transparent;
+    margin: 15px;
+    padding: 12px;
+    font-family: century gothic;
+	}
+	
+	#botaook{
+	color:#fff;
+	font-size:20px; 
+    background-color: rgba(255, 0, 0, 0.6);
+    border-color:#FF6868;
+    border: 1px solid transparent;
+    margin: 15px;
+    padding: 12px;
+    font-family: century gothic;
+	}
 	#texto{
 	text-align: justify;
 	
 	}
-	
-	
 	
 	
